cif/org.eclipse.escet.cif.tests/tests/checks/FuncNoSpecificUserDefCheckExternal.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:
  ----------------------------------------------------
  (1/1) Function is an external user-defined function.
  ----------------------------------------------------
   * In the top-level scope of the specification:
     - func bool EXT_NO_PARAM_f(): "java:somepkg.SomeClass.someMethod|.";
                 ^
     - func bool EXT_PARAM_h(int v): "java:somepkg.SomeClass.someMethod2|.";
                 ^
   * In group "g":
     - func bool EXT_NO_PARAM_f(): "java:somepkg.SomeClass.someMethod|.";
                 ^
     - func bool EXT_PARAM_h(int v): "java:somepkg.SomeClass.someMethod2|.";
                 ^
